# techTest

./: .gitignore  CMakeLists.txt  Main.qml  README.md  counts_model.cpp  counts_model.h  main.cpp  main_controller.cpp  main_controller.h  sql.cpp  sql.h
